--- a/part-4/blogs/package.json
+++ b/part-4/blogs/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "node --test"
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "test": "NODE_ENV=test node --test"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +18,8 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.9.2",
     "nodemon": "^3.1.9"
+  },
+  "devDependencies": {
+    "supertest": "^7.0.0"
   }
 }
