--- a/part-4/blogs/package.json
+++ b/part-4/blogs/package.json
@@ -6,20 +6,23 @@
   "scripts": {
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development nodemon index.js",
-    "test": "NODE_ENV=test node --test"
+    "test": "NODE_ENV=test node --test --test-concurrency=1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.9.2",
     "nodemon": "^3.1.9"
   },
   "devDependencies": {
+    "@types/node": "^22.10.2",
     "supertest": "^7.0.0"
   }
 }
